--- a/src/app/page/about/about.component.html
+++ b/src/app/page/about/about.component.html
@@ -14,13 +14,13 @@
         <h1
           class="text-4xl sm:text-5xl lg:text-6xl font-bold text-[#0f0f0f] mb-4 leading-tight"
         >
-          Branding That Drives Results
+          Connecting People. Powering Possibilities.
         </h1>
         <p
           class="text-[#0f0f0f] mb-6 max-w-md mx-auto md:mx-0 text-sm sm:text-base"
         >
-          We turn ideas into revenue through design, strategy, and creative
-          collaboration.
+          <!-- We turn ideas into revenue through design, strategy, and creative
+          collaboration. -->
         </p>
         <div
           class="flex flex-col sm:flex-row justify-center md:justify-start gap-4"
@@ -101,7 +101,7 @@
           <div class="image-train-track animate-scrollUp">
             <div class="image-train-row flex gap-4 px-2">
               <img
-                src="simbi1.png"
+                src="simbi.jpg"
                 alt="People meeting"
                 class="w-full object-center rounded-lg"
               />
@@ -114,12 +114,12 @@
   <div
     class="flex flex-col lg:flex-row max-w-7xl mx-auto py-10 px-4 sm:px-6 lg:px-8 gap-8 pt-20 relative"
   >
-    <div
+    <!-- <div
       class="gradent-left w-[300px] h-[300px] md:h-[500px] md:w-[500px]"
     ></div>
     <div
       class="gradent-right absolute w-fit h-fit md:h-[454px] md:w-[440px]"
-    ></div>
+    ></div> -->
     <!-- Sidebar -->
     <!-- <aside
       class="bg-[#1e1e1e] rounded-2xl p-6 w-full lg:w-1/4 text-center shadow-lg"
@@ -190,40 +190,40 @@
           one of the most cost-effective ways to scale your business.
         </p> -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-          <div class="bg-white p-4 rounded-lg shadow hover:shadow-lg">
+          <div class="bg-black p-4 rounded-lg shadow hover:shadow-lg ">
             <h3
-              class="text-lg font-bold flex items-center gap-2 text-[#0f0f0f]"
+              class="text-lg font-bold flex items-center gap-2 text-[#fff]"
             >
-              <i class="fas fa-laptop-code text-[#9a7aa4]"></i>
+              <i class="fas fa-laptop-code text-[#fff]"></i>
               Mission
             </h3>
-            <p class="text-sm text-gray-400 mt-2">
+            <p class="text-sm text-white mt-2">
               To empower individuals and businesses of all sizes through
               creativity, strategy, and storytelling helping them scale locally
               and globally while making a meaningful impact.
             </p>
           </div>
-          <div class="bg-white p-4 rounded-lg shadow hover:shadow-lg">
+          <div class="bg-[#0f0f0f] p-4 rounded-lg shadow hover:shadow-lg">
             <h3
-              class="text-lg font-bold flex items-center gap-2 text-[#0f0f0f]"
+              class="text-lg font-bold flex items-center gap-2 text-[#fff]"
             >
               <i class="fas fa-code text-yellow-400"></i>
               Vision
             </h3>
-            <p class="text-sm text-gray-400 mt-2">
+            <p class="text-sm text-white mt-2">
               To become a leading multi-service company in the UK and beyond
               transforming businesses into brands that inspire, connect, and
               thrive worldwide.
             </p>
           </div>
-          <div class="bg-white p-4 rounded-lg shadow hover:shadow-lg">
+          <div class="bg-[#0f0f0f] p-4 rounded-lg shadow hover:shadow-lg">
             <h3
-              class="text-lg font-bold flex items-center gap-2 text-[#0f0f0f]"
+              class="text-lg font-bold flex items-center gap-2 text-[#fff]"
             >
               <i class="fas fa-mobile-alt text-yellow-400"></i>
               Core Values
             </h3>
-            <ul class="text-sm text-gray-400 mt-2 space-y-2">
+            <ul class="text-sm text-white mt-2 space-y-2">
               <li><strong>Resilience</strong>: Turning challenges into opportunities.</li>
               <li><strong>Integrity</strong>: Honesty, trust, and transparency.</li>
               <li><strong>Innovation</strong>: Modern solutions for evolving markets.</li>
