--- a/src/app/page/index/index.component.html
+++ b/src/app/page/index/index.component.html
@@ -86,7 +86,7 @@
   >
     <!-- Overlay (optional, for readability) -->
     <div
-      class="absolute inset-0 bg-gradient-to-r from-[#6c23464d] to-[#9a7aa400]"
+      class="absolute inset-0 bg-gradient-to-r from-[#1e1e1ecc] to-[#1e1e1ecc]"
     ></div>
 
     <!-- Content -->
@@ -361,7 +361,7 @@
           <h2
             class="text-3xl md:text-4xl font-bold text-gray-900 mb-4 text-justify"
           >
-            Why SÍMBÍÀTÚÚ
+            About Us
           </h2>
           <p class="text-gray-600 max-w-2xl mx-auto text-justify mb-12">
             <strong>SÍMBÍÀTÚÚ</strong> means <em>Brave Woman</em> a name rooted
@@ -378,7 +378,7 @@
             routerLinkActive="router-link-active"
             class="inline-flex items-center px-6 py-3 border border-[#eb002b] text-[#eb002b] font-medium rounded-full hover:bg-[#eb002b] hover:text-white transition"
           >
-            About us
+            See More
             <fa-icon [icon]="['fas', 'arrow-right']" class="ml-2"></fa-icon>
           </a>
         </div>
