--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -1,10 +1,10 @@
 
-<section class="py-20 px-4 bg-gradient-to-r from-[#c86635] to-[#F8FAFC] text-white p-6 text-center relative">
+<section class="py-20 px-4 bg-gradient-to-r from-[#060606cc] to-[#1e1e1ecc] text-white p-6 text-center relative">
   <div class="gradent-left w-fit h-fit md:h-[500px] md:w-[500px]"></div>
   <div class="gradent-right absolute w-fit h-fit md:h-[454px] md:w-[440px]"></div>
   <div class="max-w-4xl mx-auto text-center mb-10">
     <h2 class="text-3xl font-bold mb-2">Frequently asked questions</h2>
-    <p class="text-gray-600 capitalize">How SÍMBÍÀTÚÚ can benefit your business</p>
+    <p class="text-white capitalize">How SÍMBÍÀTÚÚ can benefit your business</p>
   </div>
 
   <div class="max-w-4xl mx-auto space-y-4">
@@ -22,7 +22,7 @@
           </span>
           <span
             class="w-6 h-6 flex items-center justify-center rounded-full pb-1"
-            [class]="faq.open ? 'bg-[#c86635] text-white' : 'bg-black text-white'"
+            [class]="faq.open ? 'bg-[#1e1e1ecc] text-white' : 'bg-black text-white'"
           >
             {{ faq.open ? '−' : '+' }}
           </span>
